[tool.poetry]
name = "workflow-exporter-plugin"
version = "0.1.0"
description = "Renku workflow exporter plugin"
authors = ["Viktor Gal <viktor.gal@maeth.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
renku = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."renku.cli_plugins"]
export = "workflow_exporter_plugin.plugin:export"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
